--- a/app/views/stocks/intraday.html.erb
+++ b/app/views/stocks/intraday.html.erb
@@ -6,11 +6,8 @@
   <%= form.text_field :symbol, required: true %>
   <%= form.submit "Search Stock" %>
 <% end %>
+<p><%= link_to 'Regenerate Stocks', intraday_stocks_path  %></p>
 
 <% if @latest_open_value %>
-  <h2>Latest Open Value:</h2>
-  <p>Symbol: <%= params[:symbol] %></p>
   <p>Stock Price: <%= @latest_open_value %></p>
-<% elsif @intraday_data.is_a?(Hash) && @intraday_data["error"] %>
-  <p style="color: red;">Error: <%= @intraday_data["error"] %></p>
 <% end %>
